--- a/index.html
+++ b/index.html
@@ -5,14 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luis Arturo Cárdenas Bustamante</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400&family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
         <div class="header__container">
-            <div class="header__photo">Photo</div> <!-- .end header__photo-->
-            <div class="header__title">Name and career</div> <!-- .end header__title-->
-            <div class="header__menu">Menu</div> <!-- .end header__menu-->
+            <div class="header__info text-center">
+                <img src="img/prueba.jpg" alt="image header" class="header__photo--circle">
+                <span class="header__title--name">Luis Arturo Cárdenas Bustamante</span>
+                <span class="header__title--carrer">
+                    Desarrollador de Software
+                    <br>
+                    <a href="#">luis.cardenas.bustamante@gmail.com</a>
+                    <br>
+                    <a href="#" class="icono"><i class="bi-linkedin" role="img" aria-label="GitHub"></i></a>
+                    <a href="#" class="icono"><i class="bi-twitter" role="img" aria-label="GitHub"></i></a>
+                    <a href="#" class="icono"><i class="bi-facebook" role="img" aria-label="GitHub"></i></a>
+                    <!-- Iconos -->
+                </span> 
+            </div><!-- End header__info-->
         </div>
+        
+        <nav class="header__menu header__menu--default header_menu--sticky">
+            <div class="header__menu--container-fluid">
+                <div class="header__menu--collapse">
+                    <ul class="nav header__menu--nav">
+                        <li class="active"><a href="#">Sobre mí</a></li>
+                        <li><a href="#" >Proyectos</a></li>
+                        <li><a href="#" >Habilidades</a></li>
+                        <li><a href="#" >Contactame</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav> <!-- .end header__menu -->
     </header>
 </body>
 </html>
