--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         
         <nav class="header__menu header__menu--default header_menu--sticky">
             <div class="header__menu--container-fluid">
-                <div class="header__menu--collapse">
+                <div class="header__menu--barra">
                     <ul class="nav header__menu--nav">
                         <li class="active"><a href="#">Sobre mí</a></li>
                         <li><a href="#" >Proyectos</a></li>
@@ -43,5 +43,10 @@
             </div>
         </nav> <!-- .end header__menu -->
     </header>
+
+    <section>
+        <!-- Sobre mi y Estudios -->
+        Sobre mi y Estudios
+    </section>
 </body>
 </html>
