Se subira cambios realizados al css

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         </nav> <!-- .end header__menu -->
     </header>
 
-    <section>
+    <section id="sobre__mi">
         <!-- Sobre mi y Estudios -->
-        Sobre mi y Estudios
+        <p>Sobre mi y Estudios</p>
     </section>
 </body>
 </html>
