Cambios leves que se han hecho en la construccion del portafolio

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,8 +10,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400&family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header class="header">
         <div class="header__container">
@@ -23,30 +27,81 @@
                     <a href="#">luis.cardenas.bustamante@gmail.com</a>
                     <br>
                     <a href="#" class="icono"><i class="bi-linkedin" role="img" aria-label="GitHub"></i></a>
-                    <a href="#" class="icono"><i class="bi-twitter" role="img" aria-label="GitHub"></i></a>
-                    <a href="#" class="icono"><i class="bi-facebook" role="img" aria-label="GitHub"></i></a>
+                    <a href="#" class="icono"><i class="bi-twitter" role="img" aria-label="twitter"></i></a>
+                    <a href="#" class="icono"><i class="bi-facebook" role="img" aria-label="bi-facebook"></i></a>
                     <!-- Iconos -->
-                </span> 
+                </span>
             </div><!-- End header__info-->
         </div>
-        
-        <nav class="header__menu header__menu--default header_menu--sticky">
+
+        <nav class="header__menu header__menu--default">
             <div class="header__menu--container-fluid">
                 <div class="header__menu--barra">
                     <ul class="nav header__menu--nav">
                         <li class="active"><a href="#">Sobre mí</a></li>
-                        <li><a href="#" >Proyectos</a></li>
-                        <li><a href="#" >Habilidades</a></li>
-                        <li><a href="#" >Contactame</a></li>
+                        <li><a href="#">Proyectos</a></li>
+                        <li><a href="#">Habilidades</a></li>
+                        <li><a href="#">Contactame</a></li>
                     </ul>
                 </div>
             </div>
         </nav> <!-- .end header__menu -->
     </header>
 
-    <section id="sobre__mi">
-        <!-- Sobre mi y Estudios -->
-        <p>Sobre mi y Estudios</p>
+    <section id="about">
+        <div class="container">
+            <h2>Sobre mí</h2>
+            <p>Una breve introducción sobre ti y tu experiencia como desarrollador de software. Destaca tus habilidades
+                clave
+                y logros profesionales.</p>
+        </div>
     </section>
+
+    <section id="projects">
+        <div class="container">
+            <h2>Proyectos</h2>
+            <div class="project">
+                <h3>Nombre del proyecto 1</h3>
+                <p>Descripción del proyecto y tu contribución al desarrollo del mismo. Incluye tecnologías utilizadas y
+                    resultados obtenidos.</p>
+            </div>
+            <div class="project">
+                <h3>Nombre del proyecto 2</h3>
+                <p>Descripción del proyecto y tu contribución al desarrollo del mismo. Incluye tecnologías utilizadas y
+                    resultados obtenidos.</p>
+            </div>
+            <!-- Agrega aquí más proyectos -->
+        </div>
+    </section>
+
+    <section id="skills">
+        <div class="container">
+            <h2>Habilidades</h2>
+            <ul>
+                <li>Habilidad 1</li>
+                <li>Habilidad 2</li>
+                <li>Habilidad 3</li>
+                <!-- Agrega aquí más habilidades -->
+            </ul>
+        </div>
+    </section>
+
+    <section id="contact">
+        <div class="container">
+            <h2>Contacto</h2>
+            <p>¡Estoy interesado en nuevas oportunidades y colaboraciones! Puedes contactarme a través de:</p>
+            <ul>
+                <li>Email: [tu.email@example.com]</li>
+                <li>Teléfono: [tu número de teléfono]</li>
+                <li>LinkedIn: [tu perfil de LinkedIn]</li>
+                <!-- Agrega aquí más métodos de contacto si lo deseas -->
+            </ul>
+        </div>
+    </section>
+
+    <footer>
+        <p>Derechos de autor © [Año] [Tu Nombre]. Todos los derechos reservados.</p>
+    </footer>
 </body>
+
 </html>
